<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="ca.steven_zhu.a3paint.DrawCanvas">

    <ca.steven_zhu.a3paint.DrawView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="3dp"
        android:layout_weight="1.00"
        android:background="#FFFFFFFF" />

    <LinearLayout
        android:id="@+id/tool_chooser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/select_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/select"
            android:background="@drawable/select"
            android:src="@drawable/btn_unpressed"
            android:tag="select" />

        <ImageButton
            android:id="@+id/line_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/line"
            android:background="@drawable/line"
            android:src="@drawable/btn_unpressed"
            android:tag="line" />

        <ImageButton
            android:id="@+id/circle_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/circle"
            android:background="@drawable/circle"
            android:src="@drawable/btn_unpressed"
            android:tag="circle" />

        <ImageButton
            android:id="@+id/rectangle_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/rectangle"
            android:background="@drawable/rectangle"
            android:src="@drawable/btn_unpressed"
            android:tag="rectangle" />


        <ImageButton
            android:id="@+id/erase_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/erase"
            android:background="@drawable/erase"
            android:src="@drawable/btn_unpressed"
            android:tag="erase" />

        <ImageButton
            android:id="@+id/fill_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="toolClicked"
            android:contentDescription="@string/fill"
            android:background="@drawable/fill"
            android:src="@drawable/btn_unpressed"
            android:tag="fill" />

        <ImageButton
            android:id="@+id/save_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:onClick="saveCanvas"
            android:contentDescription="@string/save"
            android:background="@drawable/save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <LinearLayout
            android:id="@+id/paint_colors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/paint_black"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:background="#FF660000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/btn_unpressed"
                android:tag="#FF660000" />

            <ImageButton
                android:id="@+id/paint_red"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:background="#FFFF0000"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/btn_unpressed"
                android:tag="#FFFF0000" />

            <ImageButton
                android:id="@+id/paint_green"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:background="#FF009900"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/btn_unpressed"
                android:tag="#FF009900" />

            <ImageButton
                android:id="@+id/paint_blue"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="2dp"
                android:background="#FF0000FF"
                android:contentDescription="@string/paint"
                android:onClick="paintClicked"
                android:src="@drawable/btn_unpressed"
                android:tag="#FF0000FF" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/brush_chooser"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/small_brush"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="brushClicked"
                android:contentDescription="@string/sml"
                android:src="@drawable/small"
                android:tag="small" />


            <ImageButton
                android:id="@+id/medium_brush"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="brushClicked"
                android:contentDescription="@string/med"
                android:src="@drawable/medium"
                android:tag="medium" />

            <ImageButton
                android:id="@+id/large_brush"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:onClick="brushClicked"
                android:contentDescription="@string/lrg"
                android:src="@drawable/large"
                android:tag="large" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
